<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="PM_Standard" Id="{8e781cdd-d47a-4081-a614-81ae67dda2ec}">
    <Declaration><![CDATA[///////////
// Structure For I35. Main Operating Data to be saved (ex: OPC).  
//////////
TYPE PM_Standard :
STRUCT
		MesData						: PM ; (* Object *) 
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>






